<resources>


    <string name="app_name">R.U.E</string>
    <string name="add">Agregar\n Alumno</string>
    <string name="nameHint">Nombre</string>
    <string name="added">Agregado!</string>
    <string name="nameSchool">Nombre de la Escuela</string>
    <string name="primary">Primaria</string>
    <string name="highSchool">Secundaria</string>
    <string name="continueBtn">Continuar</string>
    <string name="end">Salir</string>
    <string name="primaryEducation">EDUCACIÓN PRIMARIA</string>
    <string name="highSchoolEducation">EDUCACIÓN SECUNDARIA</string>
    <string name="studentNameListTitle">LISTADO DE ALUMNOS</string>
    <string name="errorMessageEmptyNameSchool">POR FAVOR INGRESE EL NOMBRE DE LA ESCUELA</string>
    <string name="headerRegistration">REGISTRO UNIVERSAL DE ESCUELAS \n R.U.E</string>
    <string name="textRadioButtonMale">Masculino</string>
    <string name="textRadioButtonFemale">Femenino</string>
    <string name="textButtonValidation">AGREGAR A LA LISTA</string>
    <string name="textActivityAdd">GENERO</string>
    <string name="enterAge">Ingrese el edad</string>
    <string name="enterLastName">Ingrese el Apellido</string>
    <string name="enterName">Ingrese el Nombre</string>
    <string name="textCancelButton">CANCELAR</string>
    <string name="femaleText">Femenino</string>
    <string name="maleText">Masculino</string>
    <string name="noGenederText">No tiene Genero</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="warningText">Alerta</string>
    <string name="closeApp">DESEA SALIR?</string>
    <string name="close_session">CERRAR SESION</string>
    <string name="whish_to_continue">DESEA CONTINUAR?</string>
    <string name="edit_data">Editar datos</string>
    <string name="remove_data">Eliminar datos</string>
    <string name="bothOfThem">EDUCACIÓN PRIMARIA Y SECUNDARIA</string>
    <string name="type_education">Tipo de Educación:</string>
    <string name="id">Id</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="age">Edad</string>
    <string name="gender">Genero</string>
    <string name="updated_list">Lista Actualizada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">GUARDAR</string>
    <string name="edit">EDITAR</string>
    <string name="remove">ELIMINAR</string>
    <string name="please_enter_name">POR FAVOR INGRESE EL NOMBRE</string>
    <string name="please_enter_lastname">POR FAVOR INGRESE EL APELLIDO</string>
    <string name="please_enter_age">POR FAVOR INGRESE LA EDAD</string>
    <string name="successfully_added">Agregado exitosamente</string>
    <string name="modified_student">Alumno modificado</string>
    <string name="want_to_delete_student">Desea Eliminar Alumno??</string>
    <string name="delete_student">Alumno Eliminado</string>
    <string name="closed_session">SESION CERRADA</string>
    <string name="error_message">ALGO SALIO MAL %1$s</string>
    <string name="success_message">ACTUALIZACION EXITOSA</string>
    <string name="please_complete_all_fields">POR FAVOR COMPLETA TODOS LOS CAMPOS</string>
    <string name="please_wait">Por favor Espere &#8230;</string>
    <string name="welcome">Bienvenido</string>

    <!-- Nota: Preguntar como organizar los string si por views o por palabras -->
</resources>