<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.RegistrationActivity">

    <TextView
        android:id="@+id/headerActivityRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/button_padding"
        android:text="@string/headerRegistration"
        android:textSize="@dimen/headerTextSizeRegistration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/schoolNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameSchool"
        android:inputType="textShortMessage"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerActivityRegistration" />

    <CheckBox
        android:id="@+id/primaryCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schoolNameEditText" />

    <CheckBox
        android:id="@+id/highSchoolCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highSchool"
        app:layout_constraintStart_toEndOf="@+id/primaryCheck"
        app:layout_constraintTop_toTopOf="@id/primaryCheck" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/endButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/continueButton" />


</androidx.constraintlayout.widget.ConstraintLayout>