<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin">

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/button_padding"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@id/recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHome" />

    <CheckBox
        android:id="@+id/CheckHomePrimary"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:text="@string/primaryEducation"
        app:layout_constraintEnd_toStartOf="@id/btnAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHome" />

    <CheckBox
        android:id="@+id/CheckHomeHighSchool"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:text="@string/highSchoolEducation"
        app:layout_constraintEnd_toStartOf="@id/btnAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CheckHomePrimary" />

    <TextView
        android:id="@+id/textViewHome"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_element"
        android:hint="@string/nameHint"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@id/btnAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/studentNameListTitle"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CheckHomeHighSchool" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraint"
        android:layout_marginTop="@dimen/margin_element"
        app:layout_constraintBottom_toTopOf="@id/endButtonHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerRecyclerView" />

    <Button
        android:id="@+id/endButtonHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler" />

</androidx.constraintlayout.widget.ConstraintLayout>