<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_add"
    tools:context=".add.addFragment.AddFragment">

    <data>

        <variable
            name="presenterAddActions"
            type="com.zalo.firstAppMVP.add.addPresenter.AddPresenter" />

        <variable
            name="addFragment"
            type="com.zalo.firstAppMVP.add.addFragment.AddFragment" />




    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/studentName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enterName"
            app:errorIconDrawable="@drawable/ic_error"
            app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:afterTextChanged="@{()->addFragment.setName()}"
                android:focusable="auto"
                android:inputType="textCapWords"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/studentLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enterLastName"
            app:errorIconDrawable="@drawable/ic_error"
            app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/studentName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:afterTextChanged="@{()->addFragment.setLastName()}"
                android:inputType="textCapWords"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/studentAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enterAge"
            app:errorIconDrawable="@drawable/ic_error"
            app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/studentLastName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:afterTextChanged="@{()->addFragment.setAge()}"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/titleRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraint"
            android:layout_marginTop="@dimen/dimen16"
            android:text="@string/textActivityAdd"
            android:textAlignment="center"
            android:textSize="@dimen/sizeTitleRadioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/studentAge" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraint"
            android:gravity="center"
            android:onCheckedChanged="@{()->addFragment.setGender()}"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleRadioGroup">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="@dimen/width_radioButton"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/textRadioButtonMale" />

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="@dimen/width_radioButton"
                android:layout_height="wrap_content"
                android:text="@string/textRadioButtonFemale" />
        </RadioGroup>

        <Button
            android:id="@+id/aggregateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> presenterAddActions.buttonAddClicked()}"
            android:text="@string/textButtonValidation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancelButton"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancelButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> presenterAddActions.buttonCancelClicked()}"
            android:text="@string/textCancelButton"
            app:layout_constraintBottom_toBottomOf="@id/aggregateButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/aggregateButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
